fix: fix icon spacing

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -38,6 +38,6 @@
     font-size: 2rem;
     justify-content: space-evenly;
     margin-right: var(--margin-24px);
-    width: 100%;
+    width:80%;
 }
 
